[package]
name = "watime"
version = "0.1.0"
edition = "2021"
authors = ["Shayne O'Sullivan <shayneosull@gmail.com>"]
license = "MIT"
description = "A time formatting cli tool"
readme = "README.md"
homepage = "https://github.com/shayneo/watime"
repository = "https://github.com/shayne/watime"
keywords = ["cli", "time"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "3.0", features = ["derive"] }
chrono = "0.4"
